[Merge] Fix Java17